Fixing build hook

--- a/hooks/build
+++ b/hooks/build
@@ -24,7 +24,7 @@ IOTMON_IMAGE_NAME=intersystemsdc/$GIT_REPO_NAME:iris-${DOCKER_TAG}
 docker build -t $IMAGE_NAME ./iotmon
 exit_if_error "IOTMON Image could not be built"
 
-echo $IOTMON_IMAGE_NAME >> ../images_built
+echo $IOTMON_IMAGE_NAME >> ./images_built
 
 #
 # Build ARCHIVEDB image
@@ -33,4 +33,4 @@ ARCHIVEDB_IMAGE_NAME=intersystemsdc/$GIT_REPO_NAME:iris-${DOCKER_TAG}
 docker build -t $IMAGE_NAME ./archivedb
 exit_if_error "ARCHIVEDB Image could not be built"
 
-echo $ARCHIVEDB_IMAGE_NAME >> ../images_built
+echo $ARCHIVEDB_IMAGE_NAME >> ./images_built
